@@ -1197,6 +1197,8 @@ void MuseScore::setCurrentScoreView(ScoreView* view)
             seq->setScoreView(cv);
       if (playPanel)
             playPanel->setScore(cs);
+      if(iledit)
+            iledit->updateAll(cs);
       if (!enable) {
             changeState(STATE_DISABLED);
             _undoGroup->setActiveStack(0);
